# Processlib

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README  SConstruct  add_include_namespace.py  pom.xml  pom_64_el5.xml  pyproject.toml
cmake/: FindNumPy.cmake  FindSIP.cmake  ProcesslibTools.cmake  SIPMacros.cmake  package_config.cmake  project-config.cmake.in  sip_init_numpy.cpp.in
conda/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
conda/debug/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
conda/release/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
core/: CMakeLists.txt  pom.xml
core/include/: BackgroundProcessMgr.h  BaseProcessClass.h  Compatibility.h  Data.h  DataTask.h  GslErrorMgr.h  LinkTask.h  PoolThreadMgr.h  ProcessExceptions.h  SinkTask.h  SinkTaskMgr.h  SinkTaskMgr.i  Stat.h  Task.h  TaskEventCallback.h  TaskMgr.h
core/include/WindowSpecific/: pthread.h  pthread_cancelling.h  pthread_cond.h  pthread_key.h  pthread_mutex.h  pthread_rwlock.h  pthread_thread.h  stdio_compat.h  time_compat.h  unistd.h
core/include/processlib/: Buffer.h  Compatibility.h  Container.h  Container.inl  Data.h  GslErrorMgr.h  LinkTask.h  Metadata.h  PoolThreadMgr.h  ProcessExceptions.h  SidebandData.h  SinkTask.h  SinkTaskMgr.h  SinkTaskMgr.i  Stat.h  TaskEventCallback.h  TaskMgr.h  TypedData.h
core/include/processlib/Sideband/: CompressedData.h  Data.h  DataContainer.h
core/include/processlib/WindowSpecific/: pthread.h  pthread_cancelling.h  pthread_key.h  pthread_mutex.h  pthread_rwlock.h  pthread_thread.h
core/include/processlib/sideband/: CompressedData.h  Data.h  DataContainer.h  SidebandData.h
core/include/win/: stdio_compat.h
core/src/: BackgroundProcessMgr.cpp  GslErrorMgr.cpp  HeaderContainer.cpp  LinkTask.cpp  Metadata.cpp  PoolThreadMgr.cpp  SinkTask.cpp  TaskEventCallback.cpp  TaskMgr.cpp
core/src/WindowSpecific/: CMakeLists.txt  pthread_cancelling.cpp  pthread_cond.cpp  pthread_key.cpp  pthread_mutex.cpp  pthread_rwlock.cpp  pthread_thread.cpp  stdio_compat.cpp  time_compat.cpp
core/src/win/: stdio_compat.cpp  time_compat.cpp
docs/: .gitignore  algorithms.md  conf.py  core.dox  core.md  cpp_api.rst  index.rst  tasks.dox
sip/: .gitignore  FlatfieldCorrection.sip  Flip.sip  Mask.sip  Roi2Spectrum.sip  clean.py  configure.py  data_header_iterator.h  processlib.sip  processlib_before_4_12.sip  processlibconfig.py.in
tasks/: CMakeLists.txt  pom.xml
tasks/include/: BackgroundSubstraction.h  Binning.h  Bpm.h  FlatfieldCorrection.h  Flip.h  Mask.h  PeakFinder.h  Roi2Spectrum.h  RoiCounter.h  Rotation.h  SoftRoi.h
tasks/include/processlib/: BackgroundSubstraction.h  Binning.h  Bpm.h  EnergyRoiCounter.h  FlatfieldCorrection.h  Flip.h  Mask.h  PeakFinder.h  Roi2Spectrum.h  RoiCollection.h  RoiCounter.h  Rotation.h  SoftRoi.h
tasks/sip/: BackgroundSubstraction.sip  Binning.sip  Bpm.sip  EnergyRoiCounter.sip  FlatfieldCorrection.sip  Flip.sip  Mask.sip  PeakFinder.sip  Roi2Spectrum.sip  RoiCollection.sip  RoiCounter.sip  Rotation.sip  SoftRoi.sip
tasks/src/: BackgroundSubstraction.cpp  Binning.cpp  Bpm.cpp  EnergyRoiCounter.cpp  FlatfieldCorrection.cpp  Flip.cpp  Makefile  Mask.cpp  PeakFinder.cpp  Roi2Spectrum.cpp  RoiCollection.cpp  RoiCounter.cpp  Rotation.cpp  SoftRoi.cpp
test/: BpmTest.py  CMakeLists.txt  CallBackTest.py  EdfFile.py  ProcessTest.py  RoiCounterTest.py  testEnergyRoi.py  test_background_substraction.cpp  test_binning.py  test_bpm.cpp  test_data.cpp  test_process.cpp  test_roicollection.py
test/cpp/: CMakeLists.txt  test_core.cpp  test_data.cpp  test_pool_thread_mgr.cpp  test_typed_data.cpp
test/python/: CallBackTest.py  crl8_0.edf
