[build-system]
requires = ["sip >=5, <6"]
build-backend = "sipbuild.api"

[tool.sip.project]
sip-files-dir = "sip"
build-dir = "build-sip"

[project]
name = "processlib"
requires-python = ">= 3.10"
#dynamic = ["version"]
authors = [{ name = "BCU (ESRF)" }]
description = "Python binding for Processlib"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://gitlab.esrf.fr/limagroup/processlib"
Documentation = "https://limagroup.gitlab-pages.esrf.fr/processlib"